results/4adc32cca7b14c46082c4112817368b7/err_code.txt
Traceback (most recent call last):
  File "./pyfile.py", line 15, in <module>
    from theonlinemcmc import MCMCWrapper
  File "/usr/local/lib/python2.7/dist-packages/theonlinemcmc/MCMCWrapper.py", line 21
    self.gauss_like_sigma = gauss_like_sigma
    ^
IndentationError: unexpected indent
